# Ripple

./: .gitignore  README.md
docs/: faultline-graph.html  index.html
faultline/: .ai-catalog-mapping.json  .gitignore  .gitlab-ci.yml  CATALOG.md  CORRECTNESS.md  DEMO.md  DEVPOST.md  DEVPOST_STORY.md  README.md
faultline/agent/: codequality.go  codequality_test.go  convert_test.go  gate.go  gate_test.go  go.mod  governance_test.go  main.go  orbithealth.go  orbithealth_test.go  polyglot_test.go  viz.go  viz_test.go
faultline/agents/: faultline-impact-reviewer.yml
faultline/ci/: faultline-gate.yml
faultline/demo/polyglot/: README.md
faultline/docs/branding/: README.md
faultline/engine/: Cargo.toml
faultline/engine/src/: main.rs
ripple/: .gitignore  .gitlab-ci.yml  CATALOG.md  LICENSE
ripple/agent/: adversarial_test.go  convert_test.go  go.mod  main.go
ripple/agents/: ripple-impact-reviewer.yml
ripple/engine/: Cargo.toml
ripple/engine/src/: main.rs
ripple/engine/tests/: perf.rs
ripple/flows/: ripple-impact.yml
