[package]
name = "ripple-engine"
version = "0.1.0"
edition = "2021"
description = "Ripple's graph engine: transitive change-impact analysis over a GitLab Orbit code subgraph"
license = "MIT"

[[bin]]
name = "ripple-engine"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
